[package]
name = "linear-predictive-coding"
version = "0.3.1"
edition = "2021"
description = "Linear Predictive Coding. calc LPC coefficients from audio signal."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oligamiq/linear-predictive-coding"

[dependencies]
# ndarray = "0.16"
ndarray = "^0"
# ndarray-inverse = { git = "https://github.com/oligamiq/ndarray-inverse"}
# ndarray-inverse = "=0.1.9"
